<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Encrypted Video Recorder</string>
    <string name="ok"> Ok </string>
    <string name="cancel">Cancel</string>
    <string name="reuse">Reuse</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="encaurageus">Encourage Us</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="export">Export MP4</string>
    <string name="exporting">Exporting</string>

    <string name="not_registered">Not registered</string>
    <string name="version">Version</string>
    <string name="visit_homepage">Visit Homepage</string>

    <string name="enter_email_and_license">Please enter the email and license code from your order information.</string>
    <string name="provide_your_licence_code">Please provide your licence code</string>
    <string name="license_email">License email:</string>
    <string name="license_code">License code:</string>
    <string name="videos">video(s)</string>
    <string name="total_size">total size</string>
    <string name="enter_password">Enter password:</string>
    <string name="password">Password:</string>
    <string name="please_create_password">Please create a password</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="six_characters_required">At least six characters are required!</string>
    <string name="white_spaces_not_allowed">White spaces are not allowed!</string>
    <string name="weak">WEAK</string>
    <string name="moderate">MODERATE</string>
    <string name="strong">STRONG</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="repeat_password">Repeat</string>
    <string name="hide_password">Hide</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="hide">Hide</string>
    <string name="reg_act_text2">Once you have received your license code, you can enter it below.</string>
    <string name="premium_upgrade">Premium upgrade</string>
    <string name="enter_code">Enter the code</string>

    <string name="general">General</string>
    <string name="general_user_preferences">General user preferences</string>
    <string name="output_folder">Output folder</string>
    <string name="output_folder_for_newly">The output folder for newly recorded videos</string>
    <string name="maximum_recording_duration">Maximum recording duration</string>
    <string name="reuse_last_password">Reuse last password</string>
    <string name="reuse_last_entered_password">Reuse last entered password</string>
    <string name="camera">Camera</string>
    <string name="camera_parameters">Camera parameters</string>
    <string name="front_camera_resolution">Front camera resolution</string>
    <string name="back_camera_resolution">Back camera resolution</string>

    <string name="rename_file">Rename file</string>
    <string name="file_name">File name</string>
    <string name="too_short">Too short</string>
    <string name="delete_file">Delete file</string>

    <string name="not_now">Not now</string>
    <string name="rate_5_stars">Rate 5 stars</string>

    <string name="stream_from_web">Stream from web</string>
    <string name="direct_download_url">direct download url (http://...)</string>
    <string name="please_retype_password">Please retype password</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this file? \\n\\n</string>
    <string name="share">Share</string>
    <string name="upload_to_ftp">Upload to FTP</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="mention_facebook">Mention on Facebook</string>
    <string name="export_was_successful">The export was successful!</string>
    <string name="export_not_completed">The export was not completed!</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="wrong_password">Wrong password!</string>
</resources>