<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >


    <item android:id="@+id/main_meit_download"
          android:title="@string/stream_from_web"
          support:showAsAction="ifRoom"
          android:icon="@drawable/download_72"
        />

    <item android:id="@+id/main_meit_share"
          android:title="@string/share"
          support:showAsAction="ifRoom"
          android:icon="@drawable/share_72"
        />

    <item android:id="@+id/main_meit_upload"
          android:title="@string/upload_to_ftp"
          support:showAsAction="ifRoom"
          android:icon="@drawable/upload_72"
        />

    <item android:id="@+id/main_meit_export"
          android:title="@string/export"
          support:showAsAction="ifRoom"
          android:icon="@drawable/export_72"
        />

    <item android:id="@+id/main_meit_rename"
          android:title="@string/rename"
          support:showAsAction="ifRoom"
          android:icon="@drawable/rename_72"
        />

    <item android:id="@+id/main_meit_delete"
          android:title="@string/delete"
          support:showAsAction="ifRoom"
          android:icon="@drawable/delete_72"
        />

</menu>