<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextAppearance="@style/MyToolbarTitleText"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/about"
        >
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:gravity="center"
                android:src="@drawable/app_icon_96"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/about_premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:gravity="center"
                android:text="Premium"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tv_about_vername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="18sp"
                />

            <Button style="@style/MyButton1"
                android:id="@+id/about_btn_visit"
                android:minWidth="@dimen/button_width_two"
                android:layout_margin="11dp"
                android:text="@string/visit_homepage"/>

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>

