<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:minWidth="300dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center_vertical"
        android:padding="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_create_password"
            android:textColor="#ffffff"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            >


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/new_pw_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >
                <TextView
                    android:id="@+id/new_pw_text_pass1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/enter_password"
                    android:singleLine="true"
                />
                <EditText
                    android:id="@+id/new_pw_pass1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >
                <TextView
                    android:id="@+id/new_pw_text_pass2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/confirm_password"
                    android:singleLine="true"
                    />
                <EditText
                    android:id="@+id/new_pw_edit_pass2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    />
            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <CheckBox
                    android:id="@+id/new_pw_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-6dp"
                    android:checked="true"
                    android:text="@string/hide_password"/>

                <CheckBox
                    android:id="@+id/new_pw_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"
                    android:text="@string/repeat_password"/>
            </RelativeLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            >

            <Button style="@style/MyButton1"
                android:id="@+id/new_pw_reuse"
                android:minWidth="99dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reuse"
                />

            <Button style="@style/MyButton1"
                android:id="@+id/new_pw_cancel"
                android:minWidth="99dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />

            <Button style="@style/MyButton1"
                android:id="@+id/new_pw_ok"
                android:minWidth="99dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                />
        </LinearLayout>


        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_margin="8dp" android:gravity="center">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="left|top" android:src="@drawable/help_48"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Attention: Remember your password. Without it the recording will be lost."
                />
        </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>