<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="#000000"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/stream_from_web" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:padding="4dp"
        >

        <EditText
            android:id="@+id/stream_dlg_edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter web URL"
            android:singleLine="true"
            android:inputType="textUri"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="11dp"
        >

        <Button style="@style/MyButton1"
            android:id="@+id/stream_dlg_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />

        <Button style="@style/MyButton1"
            android:id="@+id/stream_dlg_button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />
    </LinearLayout>


</LinearLayout>
